examples/test/testpolicy16194.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16194
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key44: value42
      key39: value13
      key15: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value46
          key46: value9
          key37: value33
